gateway/test-project/httproute.yaml
# ex — nginx static page
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ex
  namespace: ex-proj
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - ex.jtanprojects.com
  rules:
    - backendRefs:
        - name: nginx-https-service
          namespace: ex-proj
          port: 8443
